# JUCEWebUI-Issues

./: CMakeLists.txt  README.md
Modules/: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/BasicWebUI/: CMakeLists.txt  Editor.h  Processor.cpp  Resources.h
Plugins/BasicWebUI/JS/: fighter.json  index.html  main.js
Plugins/MinimalPluginTemplate/: CMakeLists.txt  PluginProcessor.cpp
